--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   <input type="text" id="letters" value="" hidden/>
   </div>
   <script src="js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 </body>
 </html>
